--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,5 +15,5 @@ jobs:
           python-version: '3.8.3'
           architecture: 'x64'
 
-      - name: Display Python Version
+      - name: Display Python version
         run: python -c "import sys; print(sys.version)"
