--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,5 +15,10 @@ jobs:
           python-version: '3.8'
           architecture: 'x64'
 
-      - name: Display Python version
+      - name: Display Python Version
         run: python -c "import sys; print(sys.version)"
+
+      - name: Install Requirements
+        run:
+          -python -m pip install --upgrade pip
+          -pip install -r requirements.txt
