--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,6 +19,7 @@ jobs:
         run: python -c "import sys; print(sys.version)"
 
       - name: Install Requirements
-        run:
-          -python -m pip install --upgrade pip
-          -pip install -r requirements.txt
+      - run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
