--- a/.github/workflows/run_testcases.yml
+++ b/.github/workflows/run_testcases.yml
@@ -19,7 +19,6 @@ jobs:
         run: python -c "import sys; print(sys.version)"
 
       - name: Install Requirements
-      - run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+      - run: python -m pip install --upgrade pip
+      - run: pip install -r requirements.txt
 
