--- a/.github/workflows/run_testcases.yml
+++ b/.github/workflows/run_testcases.yml
@@ -18,7 +18,8 @@ jobs:
       - name: Display Python Version
         run: python -c "import sys; print(sys.version)"
 
-      - name: Install Requirements
-      - run: python -m pip install --upgrade pip
-      - run: pip install -r requirements.txt
+      - name: Install PIP
+        run: python -m pip install --upgrade pip
 
+      - name: Install Requirements
+        run: pip install -r requirements.txt
