--- a/requirements.txt
+++ b/requirements.txt
@@ -54,6 +54,7 @@ pylint-django==2.3.0
 pylint-plugin-utils==0.6
 pyparsing==2.4.7
 PyPDF2==1.27.9
+pytest==7.4.3
 pytest-runner==5.3.1
 python-bidi==0.4.2
 python-dateutil==2.8.1
