--- a/.github/workflows/run_testcases.yml
+++ b/.github/workflows/run_testcases.yml
@@ -20,3 +20,6 @@ jobs:
 
       - name: Install Requirements
         run: pip install -r requirements.txt
+
+      - name: Run Testcases
+        run: pytest tests
