--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,8 @@ django-widget-tweaks==1.4.8
 djangorestframework==3.12.2
 djangorestframework-api-key==2.2.0
 filelock==3.0.12
+factory-boy==3.3.0
+Faker==20.0.0
 future==0.18.3
 google-api-core==1.32.0
 google-auth==1.30.0
@@ -54,6 +56,10 @@ pylint-plugin-utils==0.6
 pyparsing==2.4.7
 PyPDF2==1.27.9
 pytest==7.4.3
+pytest-cov==4.1.0
+pytest-django==4.7.0
+pytest-html==4.1.1
+pytest-metadata==3.0.0
 pytest-runner==5.3.1
 python-bidi==0.4.2
 python-dateutil==2.8.1
