--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,9 +13,15 @@ steps:
 
   - name: "python:3.8-slim-buster"
     id: "install-deps"
-    entrypoint: "python3"
-    args: ["-m", "pip", "install", "-r", "requirements.txt", "--user"]
+    entrypoint: "bash"
+    args:
+      - "-c"
+      - |
+        python3 -m pip install -r requirements.txt --user
+        apt -y update
+        apt -y install postgresql-client
     waitFor: [ "-" ]
+
   - name: "python:3.8-slim-buster"
     id: "collect-statics"
     entrypoint: "bash"
@@ -61,15 +67,9 @@ steps:
           && python3 ./manage.py migrate
     waitFor: ["setup-envs", "install-deps", "install-proxy", "deploy"]
 
-  - name: "python:3.8-slim-buster"
-    id: "install-postgres-client"
-    entrypoint: "bash"
-    args: ["-c", "apt -y update && apt -y install postgresql-client"]
-    waitFor: ["setup-envs", "install-deps", "install-proxy", "deploy", "migrate-db"]
-
 availableSecrets:
   secretManager:
-    - versionName: "projects/local-context-hub-staging/secrets/APP_ENGINE_ENVS/versions/latest"
+    - versionName: "projects/local-contexts-hub-sandbox/secrets/APP_ENGINE_ENVS/versions/latest"
       env: "APP_ENGINE_ENVS"
-    - versionName: "projects/local-context-hub-staging/secrets/django-storages-gcs-key/versions/latest"
+    - versionName: "projects/local-contexts-hub-sandbox/secrets/django-storages-gcs-key/versions/latest"
       env: "DJANGO_STORAGES_GCS_KEY"
