--- a/cloudbuild-dev.yaml
+++ b/cloudbuild-dev.yaml
@@ -11,18 +11,16 @@ steps:
     secretEnv: ["APP_ENGINE_ENVS", "DJANGO_STORAGES_GCS_KEY"]
     waitFor: ["-"]
 
-  - name: "python:3.8-slim-buster"
+  - name: "hdizzle/lc:2023-12-11"
     id: "install-deps"
     entrypoint: "bash"
     args:
       - "-c"
       - |
         python3 -m pip install -r requirements.txt --user
-        apt -y update
-        apt -y install postgresql-client
     waitFor: [ "-" ]
 
-  - name: "python:3.8-slim-buster"
+  - name: "hdizzle/lc:2023-12-11"
     id: "collect-statics"
     entrypoint: "bash"
     args:
@@ -53,7 +51,7 @@ steps:
           && chmod +x /workspace/cloud_sql_proxy
     waitFor: ["-"]
 
-  - name: "python:3.8-slim-buster"
+  - name: "hdizzle/lc:2023-12-11"
     id: "migrate-db"
     entrypoint: "bash"
     args:
