--- a/cloudbuild-dev.yaml
+++ b/cloudbuild-dev.yaml
@@ -11,7 +11,7 @@ steps:
     secretEnv: ["APP_ENGINE_ENVS", "DJANGO_STORAGES_GCS_KEY"]
     waitFor: ["-"]
 
-  - name: "hdizzle/lc:2023-12-11"
+  - name: "python:3.8-slim-buster"
     id: "install-deps"
     entrypoint: "bash"
     args:
@@ -20,7 +20,7 @@ steps:
         python3 -m pip install -r requirements.txt --user
     waitFor: [ "-" ]
 
-  - name: "hdizzle/lc:2023-12-11"
+  - name: "python:3.8-slim-buster"
     id: "collect-statics"
     entrypoint: "bash"
     args:
@@ -51,7 +51,7 @@ steps:
           && chmod +x /workspace/cloud_sql_proxy
     waitFor: ["-"]
 
-  - name: "hdizzle/lc:2023-12-11"
+  - name: "python:3.8-slim-buster"
     id: "migrate-db"
     entrypoint: "bash"
     args:
