--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,8 @@ certifi==2023.7.22
 charset-normalizer==2.0.6
 distlib==0.3.0
 dj-database-url==0.5.0
-Django==3.1.14
+Django==3.2
+django-allauth==0.59.0
 django-appconf==1.0.4
 django-dbbackup==4.0.2
 django-chartjs==2.3.0
@@ -17,7 +18,8 @@ django-classy-tags==2.0.0
 django-cleanup==5.1.0
 django-cookie-consent==0.2.6
 django-cors-headers==3.11.0
-django-countries==6.1.3
+django-countries==7.5.1
+django-dbbackup==4.0.2
 django-debug-toolbar==3.2.4
 django-guardian==2.3.0
 django-maintenance-mode==0.16.0
@@ -66,6 +68,7 @@ python-dateutil==2.8.1
 pytz==2020.1
 reportlab>=3.6.13
 requests==2.31.0
+requests-oauthlib==1.3.1
 rsa==4.7.2
 s3transfer==0.6.0
 setuptools==65.5.1
