--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appdirs==1.4.4
 arabic-reshaper==3.0.0
 asgiref==3.2.10
 astroid==2.4.2
+autoflake==2.2.1
 black==23.12.1
 boto3==1.26.77
 botocore==1.29.77
