--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,7 @@ exclude = '''
   | build
   | dist
   | migrations
+  | \tests
+  | manage.py
 )/
 '''
-
-[tool.autoflake]
-remove-all-unused-imports=true
-remove-duplicate-keys=true
-remove-unused-variables=true
