--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ arabic-reshaper==3.0.0
 asgiref==3.2.10
 astroid==2.4.2
 autoflake==2.2.1
-black==23.12.1
 boto3==1.26.77
 botocore==1.29.77
 cachetools==4.2.4
@@ -83,3 +82,4 @@ wheel==0.38.1
 whitenoise==5.2.0
 wrapt==1.12.1
 xhtml2pdf==0.2.11
+yapf==0.40.2
