--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ idna==3.2
 isort==5.4.2
 jmespath==0.10.0
 lazy-object-proxy==1.4.3
-mccabe==0.6.1
+mccabe==0.7.0
 packaging==21.0
 pillow>=10.0.1
 pip>=23.3
@@ -66,6 +66,7 @@ pytest-runner==5.3.1
 python-bidi==0.4.2
 python-dateutil==2.8.1
 pytz==2020.1
+removestar==1.5
 reportlab>=3.6.13
 requests==2.31.0
 rsa==4.7.2
