--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,7 @@ packaging==21.0
 pillow>=10.0.1
 pip>=23.3
 protobuf==3.18.3
-psycopg2-binary
+psycopg2-binary==2.8.5
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pylint==2.6.0
