feat: updated run_testcases.yml

--- a/.github/workflows/run_testcases.yml
+++ b/.github/workflows/run_testcases.yml
@@ -60,4 +60,5 @@ jobs:
           GCS_BUCKET: ${{ secrets.GCS_BUCKET }}
         run: |
           python manage.py migrate
-          pytest --cov=tests/unit
+          pytest --cov=.  --cov-report=term-missing --cov-fail-under=15
+
