--- a/.github/workflows/run_testcases.yml
+++ b/.github/workflows/run_testcases.yml
@@ -59,5 +59,6 @@ jobs:
           OPEN_TO_COLLABORATE_NOTICE_DOWNLOAD_ZIP: ${{ secrets.OPEN_TO_COLLABORATE_NOTICE_DOWNLOAD_ZIP }}
           GCS_BUCKET: ${{ secrets.GCS_BUCKET }}
         run: |
+          flake8
           python manage.py migrate
           pytest --cov=tests/unit
