--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,8 @@
 [tool.yapfignore]
 column_limit=79
 ignore_patterns = [
+    'accounts/apps.py',
+    'localcontexts/settings.py',
     '*/migrations/*',
     'tests/*',
     'manage.py'
