--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 appdirs==1.4.4
+APScheduler==3.10.4
 arabic-reshaper==3.0.0
-asgiref
+asgiref==3.7.2
 astroid==2.4.2
 boto3==1.26.77
 botocore==1.29.77
@@ -27,7 +28,7 @@ django-guardian==2.3.0
 django-maintenance-mode==0.16.0
 django-storages==1.11.1
 django-widget-tweaks==1.4.8
-djangorestframework==3.12.2
+djangorestframework==3.14.0
 djangorestframework-api-key==2.2.0
 exceptiongroup==1.2.0
 factory-boy==3.3.0
