--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ coverage==7.4.2
 cryptography==42.0.4
 distlib==0.3.0
 dj-database-url==0.5.0
-Django==4.2
+Django>=4.2.10
 django-allauth==0.59.0
 django-appconf==1.0.4
 django-apscheduler==0.6.2
