feat: updated config for yapf

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,13 @@ omit = [
     'tests/*',
     'manage.py'
 ]
+
+[tool.yapfignore]
+column_limit=79
+ignore_patterns = [
+    '*/apps.py',
+    'localcontexts/settings.py',
+    '*/migrations/*',
+    'tests/*',
+    'manage.py'
+]
