--- a/.github/workflows/run_testcases.yml
+++ b/.github/workflows/run_testcases.yml
@@ -34,7 +34,13 @@ jobs:
 
       - name: Install Requirements
         run: pip install -r requirements.txt
-        
+
+      - name: Install GeoJson Dependencies
+        run: |
+            sudo apt-add-repository ppa:ubuntugis/ubuntugis-unstable
+            sudo apt-get update
+            sudo apt-get install -y gdal-bin python3-gdal libgdal-dev
+
       - name: Apply Migrations and Run Tests
         env:
           PROD_KEY: ${{ secrets.PROD_KEY }}
