--- a/.github/workflows/run_testcases.yml
+++ b/.github/workflows/run_testcases.yml
@@ -36,11 +36,13 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Install GeoJson Dependencies
-        id: gdal
+        id: geojson
         run: |
             sudo apt-add-repository ppa:ubuntugis/ubuntugis-unstable
             sudo apt-get update
-            sudo apt-get install -y gdal-bin python3-gdal libgdal-dev
+            sudo apt-get install -y gdal-bin python3-gdal binutils libgdal-dev
+            sudo apt install postgresql-15-postgis-3
+            sudo apt install postgis
 
       - name: Apply Migrations and Run Tests
         if: steps.gdal.outcome == 'success'
