--- a/.github/workflows/run_testcases.yml
+++ b/.github/workflows/run_testcases.yml
@@ -41,8 +41,8 @@ jobs:
             sudo apt-add-repository ppa:ubuntugis/ubuntugis-unstable
             sudo apt-get update
             sudo apt-get install -y gdal-bin python3-gdal binutils libgdal-dev
-            sudo apt install postgresql-15-postgis-3
-            sudo apt install postgis
+            sudo apt-get install -y postgresql-15-postgis-3
+            sudo apt-get install -y postgis
 
       - name: Apply Migrations and Run Tests
         if: steps.gdal.outcome == 'success'
