--- a/requirements.txt
+++ b/requirements.txt
@@ -43,9 +43,9 @@ google-cloud-storage==1.38.0
 google-crc32c==1.3.0
 google-resumable-media==1.3.3
 googleapis-common-protos==1.53.0
-gunicorn==20.0.4
+gunicorn==22.0.0
 html5lib==1.1
-idna==3.2
+idna==3.7
 isort==5.4.2
 jmespath==0.10.0
 lazy-object-proxy==1.4.3
@@ -53,7 +53,7 @@ mccabe==0.7.0
 oauthlib==3.2.2
 oscrypto==1.3.0
 packaging==21.0
-pillow==10.2.0
+pillow>=10.3.0
 pluggy==1.4.0
 protobuf==3.18.3
 psycopg2-binary==2.9.9
@@ -80,7 +80,7 @@ requests-oauthlib==1.3.1
 rsa==4.7.2
 s3transfer==0.6.0
 six==1.15.0
-sqlparse==0.4.4
+sqlparse==0.5.0
 toml==0.10.1
 Unidecode==1.3.6
 uritools==4.0.2
