--- a/.github/workflows/run_testcases.yml
+++ b/.github/workflows/run_testcases.yml
@@ -60,6 +60,7 @@ jobs:
           OPEN_TO_COLLABORATE_NOTICE_DOWNLOAD_ZIP: ${{ secrets.OPEN_TO_COLLABORATE_NOTICE_DOWNLOAD_ZIP }}
           GCS_BUCKET: ${{ secrets.GCS_BUCKET }}
         run: |
+          python manage.py makemigrations --merge --no-input
           python manage.py migrate
           flake8 accounts
           pytest --cov=.  --cov-report=term-missing --cov-fail-under=15
