--- a/requirements.txt
+++ b/requirements.txt
@@ -59,6 +59,7 @@ protobuf==3.18.3
 psycopg2-binary==2.9.9
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pylenium==1.21.0
 pylint==3.0.3
 pylint-django==2.3.0
 pylint-plugin-utils==0.6
