--- a/requirements.txt
+++ b/requirements.txt
@@ -85,7 +85,7 @@ sqlparse==0.5.0
 toml==0.10.1
 Unidecode==1.3.6
 uritools==4.0.2
-urllib3==1.26.18
+urllib3>=1.26.19
 virtualenv==20.0.23
 webencodings==0.5.1
 whitenoise==5.2.0
