--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ cachetools==4.2.4
 certifi==2024.07.04
 charset-normalizer==2.0.6
 coverage==7.4.2
-cryptography==42.0.4
+cryptography>=43.0.1
 distlib==0.3.0
 dj-database-url==0.5.0
 Django>=4.2.10
