--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,13 @@ arabic-reshaper==3.0.0
 asgiref==3.7.2
 asn1crypto==1.5.1
 astroid==3.0.1
-attrs==23.2.0
+attrs==24.2.0
 axe-selenium-python==2.1.6
 boto3==1.26.77
 botocore==1.29.77
 cachetools==4.2.4
-certifi==2024.7.4
-cffi==1.16.0
+certifi==2024.07.04
+cffi==1.17.1
 charset-normalizer==2.0.6
 click==8.1.7
 colorama==0.4.6
@@ -21,10 +21,10 @@ coverage==7.4.2
 cryptography>=43.0.1
 cssselect2==0.7.0
 defusedxml==0.7.1
-dill==0.3.8
+dill==0.3.9
 distlib==0.3.0
 dj-database-url==0.5.0
-Django==5.0.6
+Django>=4.2.10
 django-allauth==0.59.0
 django-appconf==1.0.4
 django-apscheduler==0.6.2
@@ -62,40 +62,40 @@ gunicorn==22.0.0
 h11==0.14.0
 html5lib==1.1
 idna==3.7
-importlib-metadata==7.0.1
+importlib_metadata==8.5.0
 inflection==0.5.1
 iniconfig==2.0.0
 isort==5.4.2
-Jinja2==3.1.3
+Jinja2==3.1.4
 jmespath==0.10.0
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 lazy-object-proxy==1.4.3
-lxml==4.9.3
+lxml==5.3.0
 markdown-it-py==3.0.0
-MarkupSafe==2.1.4
+MarkupSafe==2.1.5
 mccabe==0.7.0
 mdurl==0.1.2
 oauthlib==3.2.2
 oscrypto==1.3.0
 outcome==1.3.0.post0
 packaging==21.0
-pillow==10.3.0
-platformdirs==4.2.0
+pillow>=10.3.0
+platformdirs==4.3.6
 pluggy==1.4.0
 protobuf==3.18.3
 psycopg2-binary==2.9.9
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.11.1
-pycparser==2.21
-pydantic==2.7.3
-pydantic_core==2.18.4
+pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
 pyflakes==3.2.0
 Pygments==2.18.0
-pyHanko==0.20.1
-pyhanko-certvalidator==0.24.1
-PyJWT==2.8.0
+pyHanko==0.25.1
+pyhanko-certvalidator==0.26.3
+PyJWT==2.9.0
 pyleniumio==1.21.0
 pylint==3.0.3
 pylint-django==2.3.0
@@ -103,7 +103,6 @@ pylint-plugin-utils==0.6
 pyparsing==2.4.7
 pypdf==4.0.2
 PyPDF2==1.27.9
-pypng==0.20220715.0
 PySocks==1.7.1
 pytest==8.0.0
 pytest-cov==4.1.0
@@ -116,43 +115,43 @@ python-bidi==0.4.2
 python-dateutil==2.8.1
 python3-openid==3.2.0
 pytz==2020.1
-pywin32==306
 PyYAML==6.0.1
-qrcode==7.4.2
+qrcode==8.0
 referencing==0.35.1
 reportlab==3.6.13
-requests==2.32.3
+requests>=2.32.0
 requests-oauthlib==1.3.1
-rich==13.7.1
+rich==13.9.1
 rpds-py==0.20.0
 rsa==4.7.2
 s3transfer==0.6.0
-selenium==4.21.0
+selenium==4.25.0
 shellingham==1.5.4
 six==1.15.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 sqlparse==0.5.0
 svglib==1.5.1
-tinycss2==1.2.1
+tinycss2==1.3.0
 toml==0.10.1
-tomli==2.0.1
-tomlkit==0.12.3
-trio==0.25.1
+tomli==2.0.2
+tomlkit==0.13.2
+trio==0.26.2
 trio-websocket==0.11.1
 typer==0.9.4
-typing_extensions==4.12.1
-tzdata==2023.3
+typing_extensions==4.12.2
+tzdata==2024.2
 tzlocal==5.2
 Unidecode==1.3.6
 uritemplate==4.1.1
 uritools==4.0.2
-urllib3==1.26.19
+urllib3>=1.26.19
 virtualenv==20.0.23
 webencodings==0.5.1
+websocket-client==1.8.0
 whitenoise==5.2.0
 wrapt==1.12.1
 wsproto==1.2.0
 xhtml2pdf==0.2.11
 yapf==0.40.2
-zipp==3.17.0
+zipp==3.20.2
