--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ django-countries==7.5.1
 django-dbbackup==4.0.2
 django-debug-toolbar==3.2.4
 django-filter==24.2
+django-geojson==4.1.0
 django-guardian==2.3.0
 django-maintenance-mode==0.16.0
 django-storages==1.11.1
