feat: doing experiment on timeout

--- a/.github/workflows/run_testcases.yml
+++ b/.github/workflows/run_testcases.yml
@@ -64,4 +64,4 @@ jobs:
         run: |
           python manage.py migrate
           flake8 accounts notifications localcontexts
-          pytest --cov=.  --cov-report=term-missing --cov-fail-under=15
+          pytest -k test_clicking_upload_shapefile_on_nld_page_navigates_to_upload_shapefile_page
